# bonjour_exmpl

client/: CMakeLists.txt  bonjourbrowse.c  bonjourbrowse.h  clientnetwork.c  clientnetwork.h  main.c
inc/: common.h
server/: CMakeLists.txt  bonjourservice.cpp  bonjourservice.h  filehandler.cpp  filehandler.h  main.cpp  serv_common.h  server.cpp  server.h
